# MagSim

./: Coil.py  README.md  TourqueSimulation.py  TrippleAxisSimulation.py  magsim.py  pyproject.toml
src/magsim/: Coil.py  TourqueSimulation.py  TrippleAxisSimulation.py  __init__.py  main.py
src/magsim.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/magsim/gui_elements/: ExportWindow.py  NavBar.py  PCBWindow.py  SimWindow.py
src/magsim/helper_functions/: ExportCoil.py  FieldLib.py  TourqueSimulation.py
src/magsim/obj_elements/: Coil.py
